# file_compressor

./: CMakeLists.txt  README.md
src/: main.cpp
src/compressor/: compressor.cpp  decompressor.cpp  images.cpp
src/include/: compressor.h  decompressor.h  images.h  utils.h
src/utils/: utils.cpp
tests/: test.txt  test_compressed.fcm  test_compressed.txt
